# spack-exercise

./: CMakeLists.txt  README.md  main.cpp  package.py
docker/: Dockerfile
docker/spack-config/: packages.yaml
docker/spack-config/linux/: compilers.yaml
